# ACS-HW-2

./: CMakeLists.txt  README.md  Архитектура.md
src/: container.cpp  container.h  main.cpp  plain.cpp  plain.h  rnd.h  ship.cpp  ship.h  train.cpp  train.h  transport.cpp  transport.h
tests/: auto_generated.txt.out  auto_generated_sorted.txt.out  mixed_sorted2.txt.out  plains.txt.out  plains_sorted.txt.out
